VQ-1943: Fix header-sub-menu for Group Admin

--- a/src/app/features/entities/components/entity/view-entity/entity-other-details/edit-aml-form/edit-aml-form.component.html
+++ b/src/app/features/entities/components/entity/view-entity/entity-other-details/edit-aml-form/edit-aml-form.component.html
@@ -1,8 +1,8 @@
-<ng-container *ngIf="!shouldShowEditForm">
+<!--<ng-container *ngIf="!shouldShowEditForm">
   <div class="progress" role="progressbar" aria-label="Animated striped example" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100">
     <div class="progress-bar progress-bar-striped progress-bar-animated" [style]="'width:' + progressBarWidth + '%'"></div>
   </div>
-</ng-container>
+</ng-container>-->
 
 <form [formGroup]="amlForm">
   <div class="row g-3">
