VQ-2356:Ability to delete and view remarks and underwriting cleanup

--- a/src/app/features/gis/components/policy/components/policy-product/policy-product.component.html
+++ b/src/app/features/gis/components/policy/components/policy-product/policy-product.component.html
@@ -609,7 +609,7 @@
                     </div>
                     <div class="row mb-4">
                         <div class=" mb-1 col-sm-4 col-12">
-                            <label for="policy_interface" class="required product-label"
+                            <label for="policy_interface" class=" product-label"
                                 id="policy_interface">{{'gis.policy.policy_document' | translate}}</label>
                                 <select class="form-select form-control-sm mb-1 ms-n4" id="product-input" formControlName="transactionType" (ngModel) ="defaultProductDocument?.name">
                                     <!-- <option value="" disabled selected>Select a product document...</option> -->
@@ -682,7 +682,7 @@
                         <div class="row mb-4">
                             <div class="mb-1 col-sm-4 col-12">
                                 <label for="payment_frequency" class="product-label"
-                                    id="payment_frequency">{{'gis.policy.other_insterested_parties' |
+                                    id="payment_frequency">{{'gis.policy.other_interested_parties' |
                                     translate}}</label>
 
                                     <p-dropdown  [options]="premiumFinanciers" optionLabel="partyName"
