--- a/src/app/features/gis/components/policy/components/policy-summary/policy-summary.component.html
+++ b/src/app/features/gis/components/policy/components/policy-summary/policy-summary.component.html
@@ -15,10 +15,10 @@
                         <a class="nav-link" id="pills-profile-tab" data-bs-toggle="pill"
                             data-bs-target="#pills-policy-other-details">Policy other details</a>
                     </li>
-                    <li class="nav-item">
+                    <!-- <li class="nav-item">
                         <a class="nav-link" id="pills-contact-tab" data-bs-toggle="pill"
                             data-bs-target="#pills-contact">Risk Details</a>
-                    </li>
+                    </li> -->
                     <li class="nav-item">
                         <a class="nav-link" id="pills-contact-tab" data-bs-toggle="pill"
                             data-bs-target="#pills-contact">Reports and documents</a>
